@@ -14,12 +14,9 @@ RTEMS_BSP_CONFIGURE
 RTEMS_PROG_CC_FOR_TARGET([-ansi -fasm])
 RTEMS_CANONICALIZE_TOOLS
 
-
-
 # Explicitly list all Makefiles here
 AC_CONFIG_FILES([Makefile
 console/Makefile
-include/Makefile
 liblnk/Makefile
 start/Makefile
 startup/Makefile
