@@ -1,18 +1,0 @@
-##
-## $Id$
-##
-
-
-include_HEADERS = bsp.h coverhd.h bspopts.h
-
-$(PROJECT_INCLUDE):
-	$(mkinstalldirs) $@
-
-$(PROJECT_INCLUDE)/%.h: %.h
-	$(INSTALL_DATA) $< $@
-
-TMPINSTALL_FILES = $(PROJECT_INCLUDE) $(include_HEADERS:%=$(PROJECT_INCLUDE)/%)
-
-all-local: $(TMPINSTALL_FILES)
-
-include $(top_srcdir)/../../../../automake/local.am
